[package]
name = "mirrord-sip"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
# mach_object = "0.1"
object = {path = "0.29.0" }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
